revision-derive/tests/compile_fail/optimised_legacy_extras.stderr
error: encoding-specific attributes (`map`, `seq`, `struct`, `length`) require `encoding = "optimised"` on the same revision entry
 --> tests/compile_fail/optimised_legacy_extras.rs:5:14
  |
5 | #[revisioned(revision(1, map = "indexed"))]
  |              ^^^^^^^^
